// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm render components goal: render AddUserForm 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="add_form_content"
      >
        <input
          class="add_form_input"
          name="new_name"
          placeholder="new name"
          type="text"
        />
        <input
          class="add_form_input"
          name="new_password"
          placeholder="new password"
          type="text"
        />
        <button
          class="add_form_back"
        >
          back
        </button>
        <button
          class="add_form_registration"
        >
          registration
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="add_form_content"
    >
      <input
        class="add_form_input"
        name="new_name"
        placeholder="new name"
        type="text"
      />
      <input
        class="add_form_input"
        name="new_password"
        placeholder="new password"
        type="text"
      />
      <button
        class="add_form_back"
      >
        back
      </button>
      <button
        class="add_form_registration"
      >
        registration
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LoginForm render components goal: render MainForm 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="main_form_content"
      >
        <label
          class="main_form_label"
          for="name"
        >
          name
        </label>
        <input
          class="main_form_input"
          name="name"
          placeholder="name"
          type="text"
        />
        <br />
        <label
          class="main_form_label"
          for="password"
        >
          password
        </label>
        <input
          class="main_form_input"
          name="password"
          placeholder="enter your password"
          type="text"
        />
        <button
          class="main_form_new_user"
        >
          don't have account yet
        </button>
        <button
          class="main_form_login"
        >
          sign in
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="main_form_content"
    >
      <label
        class="main_form_label"
        for="name"
      >
        name
      </label>
      <input
        class="main_form_input"
        name="name"
        placeholder="name"
        type="text"
      />
      <br />
      <label
        class="main_form_label"
        for="password"
      >
        password
      </label>
      <input
        class="main_form_input"
        name="password"
        placeholder="enter your password"
        type="text"
      />
      <button
        class="main_form_new_user"
      >
        don't have account yet
      </button>
      <button
        class="main_form_login"
      >
        sign in
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
